--- a/lib/email_veracity/locale/en.yml
+++ b/lib/email_veracity/locale/en.yml
@@ -6,7 +6,7 @@ en:
           invalid: 'does not appear to be a real email address'
           malformed: 'does not look like a valid email address'
           no_records: 'does not appear to be a real email address'
-          timed_out: 'request to server timed out'
+          timed_out: 'email address could not be verified'
           no_address_servers: 'domain does not have valid DNS entry'
           no_exchange_servers: 'domain does not have a valid MX entry'
           blacklisted: 'is from a blacklisted domain'
