--- a/lib/email_veracity/locale/es.yml
+++ b/lib/email_veracity/locale/es.yml
@@ -6,7 +6,7 @@ es:
           invalid: 'no parece ser una dirección de correo electrónico real'
           malformed: 'no se parece a una dirección válida de correo electrónico'
           no_records: 'no parece ser una dirección de correo electrónico real'
-          timed_out: 'petición al servidor ha agotado el tiempo'
+          timed_out: 'No se pudo verificar la dirección de correo electrónico'
           no_address_servers: 'dominio no tienen entrada DNS válido'
           no_exchange_servers: 'dominio no tienen entrada MX válido'
           blacklisted: 'es de un dominio de la lista negra'
